# preempt

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/context/: mod.rs
src/location/: mod.rs
src/model/: mod.rs
src/schedule/: mod.rs
src/task/: mod.rs
src/timeblock/: mod.rs
thoughts/: context.md  parametric_planning.md
