[package]
name = "preempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.26", features = ["serde", "clock"]}
clap = "3.2.22"
directories = "3.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_with = {version = "3.0.0", features = ["chrono_0_4"]}
serde_yaml = "0.9"
